<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowFilm">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/appbar_menu"
            app:title="@string/add_film" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/edit_image"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:background="#000000"
        android:contentDescription="@string/content_description_example"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_title_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_image">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_film_title_hint"
            android:inputType="text"
            android:importantForAutofill="no" />
       </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_sub_title_film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_title_film">

        <EditText
            android:maxLines="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_film_sub_title_hint"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/edit_film_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_film_action_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_sub_title_film" />
</androidx.constraintlayout.widget.ConstraintLayout>