<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <ScrollView
        android:id="@+id/fragment_show_film_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_show_film_textView_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="16dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/fragment_show_film_chip_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:padding="10dp"
                        android:text="@string/like"
                        app:chipIcon="@drawable/ic_like"
                        app:iconStartPadding="5dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/fragment_show_film_chip_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/action_share"
                        app:chipIcon="@drawable/ic_share"
                        app:closeIconStartPadding="5dp"
                        app:iconStartPadding="5dp" />
                </com.google.android.material.chip.ChipGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fragment_show_film_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_show_film_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_comment_edit"
                            android:inputType="textMultiLine"
                            android:maxLines="9" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/fragment_show_film_add_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/button_added_com" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
